fix: align sidebar logo vertically with navbar

--- a/docs/docs-worklets/src/css/overrides.css
+++ b/docs/docs-worklets/src/css/overrides.css
@@ -1,6 +1,8 @@
 :root {
   --swm-expandable-transition: transform 200ms ease;
   --doc-sidebar-width: 410px !important;
+  --swm-logo-height: 40px;
+  --swm-logo-title-width: 120px;
 }
 
 table {
@@ -150,8 +152,16 @@ button[class*='DocSearch-Button'] {
   display: flex;
 }
 
-[class*='sidebar'] [class*='navbar__title'] {
-  margin-left: 0;
+@media (min-width: 996px) {
+  [class*='sidebar'] [class*='navbar__logo'][class*='sidebarLogo'] {
+    height: var(--ifm-navbar-height);
+  }
+
+  [class*='sidebar'] [class*='navbar__title'] {
+    margin-left: 0;
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media (max-width: 996px) {
